Changes from 1.4.2 to 1.4.4
---------------------------
** Improvement
    * [FELIX-4623] - Add test for thread based ordering


Changes from 1.4.0 to 1.4.2
---------------------------
** Improvement
    * [FELIX-4623] - Make Async to Sync ThreadPool Ratio Configurable
    * [FELIX-4629] - Documentation - Properties and Property Defaults Incorrect
    * [FELIX-4630] - Adding PerformanceTestIT to measure difference between send and post events
** Bug
    * [FELIX-4627] - Potential Memory Leak in AsyncDeliverTasks
    * [FELIX-4617] - Empty configurations for ignore topic and ignore timeout lead to error messages in the log
    * [FELIX-4618] - NPE if config value for ignore topic or timeout is empty


Changes from 1.3.2 to 1.4.0
---------------------------
** Improvement
    * [FELIX-4608] - Merge Performance IT into Event Admin
    * [FELIX-4604] - Add a configuration to ignore certain events
    * [FELIX-3511] - Use java.concurrent from Java 6
    * [FELIX-4316] - Packages imported dynamically should also be imported statically with an optional flag


Changes from 1.3.0 to 1.3.2
---------------------------
** Bug
    * [FELIX-3689] - Event admin requires org.osgi.util.tracker in version 1.5
    

Changes from 1.2.14 to 1.3.0
----------------------------
** Bug
    * [FELIX-3121] - Add back the manifest header indicating the provided service
    * [FELIX-3451] - EventAdmin ignoring filters for handler which are registered for all (*) topics 

** Improvement
    * [FELIX-3319] - Add invalid topics when not accepting EventHandler
    * [FELIX-3321] - Improve implementation and reduce load on the service registry
    * [FELIX-3518] - Update to EventAdmin Spec 1.3

    
Changes from 1.2.12 to 1.2.14
-----------------------------
** Bug
    * [FELIX-2997] - java.lang.NullPointerException during shutdown while sending events
    * [FELIX-3002] - Embed the OBR specific information for the EventAdmin bundle in the manifest